--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/wildfly-20.0.1/modules/system/layers/base/org/hibernate/main/hibernate-core-5.3.17.Final.jar"/>
+	<classpathentry kind="lib" path="E:/wildfly-20.0.1.Final/modules/system/layers/base/org/hibernate/main/hibernate-core-5.3.17.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-11.0.0.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
