--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -7,6 +7,10 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
+  <servlet-name>faces</servlet-name>
+        <url-pattern>/faces/*</url-pattern>
+    </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
