--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-11.0.0.jar" sourcepath="C:/Users/Matia/.m2/repository/org/primefaces/primefaces/11.0.0/primefaces-11.0.0-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-lite-5.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Rodrigo/git/pf/WebContent/WEB-INF/lib/log4j-core-2.18.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlbeans-5.1.1.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
